phan quyen 65%